<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
	<string name="app_name" translatable="false">Shitter</string>
	<string name="app_name_api" translatable="false">SH1TT3R</string>
	<string name="app_website" translatable="false">https://github.com/nuclearfog/Shitter</string>
	<string name="app_info_icons_links" translatable="false">www.svgrepo.com  www.entypo.com</string>
	<string name="userlist_following" translatable="false">Following</string>
	<string name="userlist_follower" translatable="false">Follower</string>
	<string name="settings_mastodon_hint" translatable="false">mastodon.social</string>
	<string name="login_first_opt" translatable="false">1.</string>
	<string name="login_sec_opt" translatable="false">2.</string>
	<string name="login_trd_opt" translatable="false">3.</string>
	<string name="login_4th_opt" translatable="false">4.</string>
	<string name="account_user_id_prefix" translatable="false">User ID:</string>
	<string name="info_list_removed">Userlist removed</string>
	<string name="info_list_followed">Userlist followed</string>
	<string name="info_list_unfollowed">Userlist unfollowed</string>
	<string name="info_adding_user_to_list">adding user to list</string>
	<string name="info_user_added_to_list">%1$s added to List</string>
	<string name="info_user_removed">%1$s removed from list</string>
	<string name="info_list_updated">Userlist updated</string>
	<string name="info_list_created">Userlist created</string>
	<string name="info_open_twitter_login">redirecting to Twitter login website. Please wait</string>
	<string name="info_missing_api_keys">please add API tokens first before proceeding</string>
	<string name="info_open_mastodon_login">redirecting to Mastodon login website. Please wait</string>
	<string name="info_login_to_twitter">login to Twitter, please wait</string>
	<string name="info_login_to_mastodon">login to Mastodon, please wait</string>
	<string name="info_get_link">please open login page first to get the PIN</string>
	<string name="info_gps_attached">GPS position added</string>
	<string name="info_status_reposted">reposted</string>
	<string name="info_status_unreposted">Repost removed</string>
	<string name="info_status_favored">Status added to favorites</string>
	<string name="info_status_unfavored">Status removed from favorites</string>
	<string name="info_status_liked">Status liked</string>
	<string name="info_status_unliked">Status unliked</string>
	<string name="info_status_bookmarked">Status added to bookmarks</string>
	<string name="info_status_unbookmarked">Status removed from bookmarks</string>
	<string name="info_reply_hidden">Reply is hidden</string>
	<string name="info_reply_unhidden">Reply is visible</string>
	<string name="info_user_muted">User muted</string>
	<string name="info_user_unmuted">User unmuted</string>
	<string name="info_dm_send">Directmessage sent</string>
	<string name="info_dm_removed">Directmessage removed</string>
	<string name="info_image_saved">Image saved</string>
	<string name="info_status_link_copied">Link copied to clipboard</string>
	<string name="info_loading">loading..</string>
	<string name="info_profile_updated">Profile updated</string>
	<string name="info_followed">followed</string>
	<string name="info_unfollowed">unfollowed</string>
	<string name="info_blocked">blocked</string>
	<string name="info_user_unblocked">unblocked</string>
	<string name="info_status_removed">Status removed</string>
	<string name="info_status_sent">Status shared</string>
	<string name="info_location_pending">requesting location, please wait</string>
	<string name="info_refreshing_exclude_list">refreshing exclude list</string>
	<string name="info_exclude_list_updated">exclude list updated!</string>
	<string name="info_permission_read">Read permission needed to access images and videos.</string>
	<string name="info_permission_location">Location permission only needed to attach location to a status</string>
	<string name="info_permission_write">Write permission used to store images.</string>
	<string name="info_status_text_copied">Status text copied</string>
	<string name="info_status_location_copied">Location coordinates copied</string>
	<string name="info_status_medialink_copied">Media link copied</string>
	<string name="info_poll_voted">vote sent!</string>
	<string name="info_account_selected">%1$s selected</string>
	<string name="info_user_favorited">%1$s favorited your status</string>
	<string name="info_user_follow">%1$s followed you</string>
	<string name="info_user_follow_request">follow request from %1$s</string>
	<string name="info_user_mention">%1$s mentioned you</string>
	<string name="info_user_repost">%1$s reposted your status</string>
	<string name="info_missing_key">please enter key</string>
	<string name="info_missing_host">please enter correct hostname</string>
	<string name="info_database_cleared">Database cleared</string>
	<string name="info_notification_dismiss">Notification dismissed</string>
	<string name="info_hashtag_unfollowed">hashtag unfollowed</string>
	<string name="info_domain_removed">domain removed from the list</string>
	<string name="info_hashtag_followed">hashtag followed</string>
	<string name="info_domain_blocked">domain blocked!</string>
	<string name="info_webpush_update_progress">updating push configuration</string>
	<string name="info_webpush_update">Push configuration updated</string>
	<string name="info_filter_created">Filter created</string>
	<string name="info_filter_updated">Filter updated</string>
	<string name="info_filter_removed">Filter removed</string>
	<string name="info_user_reported">User reported</string>
	<string name="info_status_reported">Status reported</string>
	<string name="info_error">Error</string>
	<string name="error_duration_time_low">Poll duration time too low!</string>
	<string name="error_duration_time_high">Poll duration time too high!</string>
	<string name="error_poll_option_missing">poll option can not be empty!</string>
	<string name="error_empty_status">Empty status!</string>
	<string name="error_dm">enter username or message!</string>
	<string name="error_not_found">not found!</string>
	<string name="error_enter_code">code missing!</string>
	<string name="error_limit_exceeded">"Rate limit exceeded! Retry after: "</string>
	<string name="error_open_link">could not open link!</string>
	<string name="error_rate_limit">Too many requests! Please wait 15 minutes.</string>
	<string name="error_no_card_app">No card app found!</string>
	<string name="error_no_media_app">No gallery app found!</string>
	<string name="error_connection_failed">Connection failed!</string>
	<string name="error_invalid_link">Invalid link!</string>
	<string name="error_gps">could not fetch location information!</string>
	<string name="error_dm_send">can\'t send directmessage to this user!</string>
	<string name="error_image_save">could not save Image</string>
	<string name="error_not_authorized">Not authorized!</string>
	<string name="error_empty_name">Empty user name!</string>
	<string name="error_user_not_found">User not found!</string>
	<string name="error_service_unavailable">Service not available!</string>
	<string name="error_accesstoken">Invalid access! Please re-login!</string>
	<string name="error_status_length">Status is too long!</string>
	<string name="error_duplicate_status">Duplicate Status!</string>
	<string name="error_dm_length">Directmessage is too long!</string>
	<string name="error_list_title_empty">Empty list title!</string>
	<string name="error_username_format">Wrong username format!</string>
	<string name="error_domain_format">Wrong domain format!</string>
	<string name="error_cant_reply_to_status">You can\'t reply to this status!</string>
	<string name="error_corrupt_api_key">Error, corrupt API key!</string>
	<string name="error_acc_update">Account update failed! Please check your input!</string>
	<string name="error_acc_loading">Error while loading login information!</string>
	<string name="error_api_access_denied">Error, API access denied! Please check your API Keys.</string>
	<string name="error_api_access_limited">Error, API access limited by Twitter!</string>
	<string name="error_json_format">JSON error!</string>
	<string name="error_api_key_expired">Error, API Keys expired! Please update app!</string>
	<string name="error_database_cleared">Error while clearing database!</string>
	<string name="error_result_cancelled">Error, result cancelled!</string>
	<string name="error_search">Error, search query is too long or contains illegal characters!</string>
	<string name="error_wrong_connection_settings">wrong connection settings! Discarc changes?</string>
	<string name="error_invalid_media">Invalid media file!</string>
	<string name="error_not_defined">Not specified error!</string>
	<string name="error_forbidden_api_access">API does not support this operation!</string>
	<string name="error_adding_media">Error occurred while adding media!</string>
	<string name="error_media_init">Error while preparing media files for upload!</string>
	<string name="error_translating_status">Could not translate status</string>
	<string name="error_empty_filter_title">Filter description must not be empty</string>
	<string name="error_empty_filter_selection">It must be at least one filter enabled</string>
	<string name="error_empty_text">Empty text!</string>
	<string name="menu_status">write status</string>
	<string name="menu_hashtag_follow">follow hashtag</string>
	<string name="menu_open_twitter_search">Search</string>
	<string name="menu_open_filter">manage Filter</string>
	<string name="menu_open_settings">Settings</string>
	<string name="menu_goto_lists">Userlists</string>
	<string name="menu_bookmark_add">bookmark</string>
	<string name="menu_status_delete">delete</string>
	<string name="menu_status_hide">hide</string>
	<string name="menu_status_metrics">Metrics</string>
	<string name="menu_status_open_browser">open in browser</string>
	<string name="menu_edit_profile">edit profile</string>
	<string name="menu_add_user">add user to list</string>
	<string name="menu_edit_list">edit list</string>
	<string name="menu_list_follow">follow list</string>
	<string name="menu_search_filter">filter results</string>
	<string name="menu_select_account">Logins</string>
	<string name="menu_status_copy_text">Text</string>
	<string name="menu_status_copy_link">Status link</string>
	<string name="username">Username</string>
	<string name="image_preview">Image preview</string>
	<string name="notification_dismiss">dismiss notification</string>
	<string name="profile_link">Link</string>
	<string name="profile_location">Location</string>
	<string name="profile_bio">Bio</string>
	<string name="connection_discard">discard</string>
	<string name="dialog_connection_custom_host">use custom hostname</string>
	<string name="edit_location_hint">enter location</string>
	<string name="edit_hint_link">enter website link</string>
	<string name="delete_list">delete userlist</string>
	<string name="enter_username">enter username</string>
	<string name="profile_banner">Banner Image</string>
	<string name="editprofile_add_banner">add banner</string>
	<string name="login_app_name_label">custom app name</string>
	<string name="dialog_status_title">Status preferences</string>
	<string name="dialog_status_sensitive">mark content as sensitive</string>
	<string name="dialog_status_spoiler">mark content as spoiler</string>
	<string name="dialog_status_visibility">Visibility</string>
	<string name="dialog_apply">apply</string>
	<string name="description_filter_home_timeline">Home timeline filter enabled</string>
	<string name="description_filter_notification">Notification filter enabled</string>
	<string name="description_filter_public_timeline">Public timeline filter enabled</string>
	<string name="description_filter_thread">Thread filter enabled</string>
	<string name="description_filter_user_timeline">User timeline filter enabled</string>
</resources>