<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/new_search"
		android:icon="@drawable/search"
		android:title="@string/menu_open_twitter_search"
		app:actionViewClass="androidx.appcompat.widget.SearchView"
		app:showAsAction="always|collapseActionView" />

	<item
		android:id="@+id/search_status"
		android:icon="@drawable/post"
		android:title="@string/menu_status"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/search_hashtag"
		android:title="@string/menu_hashtag_follow"
		app:showAsAction="never"
		android:visible="false"/>

	<item
		android:id="@+id/search_filter"
		android:title="@string/menu_search_filter"
		android:checkable="true"
		app:showAsAction="never" />

</menu>