<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	style="@style/CardViewStyle">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/item_filter_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/item_filter_card_padding">

		<TextView
			android:id="@+id/item_filter_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textSize="@dimen/item_filter_title_textsize"
			android:lines="1"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toStartOf="@id/item_filter_remove" />

		<ImageButton
			android:id="@+id/item_filter_remove"
			android:layout_width="@dimen/item_filter_button_size"
			android:layout_height="@dimen/item_filter_button_size"
			android:padding="@dimen/item_status_notification_button_drawable_padding"
			android:src="@drawable/cross"
			android:scaleType="fitCenter"
			android:contentDescription="@string/notification_dismiss"
			app:layout_constraintDimensionRatio="1"
			app:layout_constraintStart_toEndOf="@id/item_filter_title"
			app:layout_constraintTop_toTopOf="@id/item_filter_title"
			app:layout_constraintBottom_toBottomOf="@id/item_filter_title"
			app:layout_constraintEnd_toEndOf="parent"
			style="@style/FeedbackButton" />

		<TextView
			android:id="@+id/item_filter_expiration"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textSize="@dimen/item_filter_default_textsize"
			android:layout_marginTop="@dimen/item_filter_layout_margin"
			android:lines="1"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/item_filter_title"
			app:layout_constraintEnd_toEndOf="parent" />

		<ImageView
			android:id="@+id/item_filter_icon_home"
			android:layout_width="@dimen/item_filter_icon_size"
			android:layout_height="@dimen/item_filter_icon_size"
			android:src="@drawable/home"
			android:layout_marginTop="@dimen/item_filter_icon_margin"
			android:contentDescription="@string/description_filter_home_timeline"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/item_filter_expiration" />

		<ImageView
			android:id="@+id/item_filter_icon_public"
			android:layout_width="@dimen/item_filter_icon_size"
			android:layout_height="@dimen/item_filter_icon_size"
			android:src="@drawable/global"
			android:layout_marginStart="@dimen/item_filter_icon_margin"
			android:layout_marginTop="@dimen/item_filter_icon_margin"
			android:contentDescription="@string/description_filter_public_timeline"
			app:layout_constraintStart_toEndOf="@id/item_filter_icon_home"
			app:layout_constraintTop_toBottomOf="@id/item_filter_expiration" />

		<ImageView
			android:id="@+id/item_filter_icon_notification"
			android:layout_width="@dimen/item_filter_icon_size"
			android:layout_height="@dimen/item_filter_icon_size"
			android:src="@drawable/bell"
			android:layout_marginStart="@dimen/item_filter_icon_margin"
			android:layout_marginTop="@dimen/item_filter_icon_margin"
			android:contentDescription="@string/description_filter_notification"
			app:layout_constraintStart_toEndOf="@id/item_filter_icon_public"
			app:layout_constraintTop_toBottomOf="@id/item_filter_expiration" />

		<ImageView
			android:id="@+id/item_filter_icon_thread"
			android:layout_width="@dimen/item_filter_icon_size"
			android:layout_height="@dimen/item_filter_icon_size"
			android:src="@drawable/answer"
			android:layout_marginStart="@dimen/item_filter_icon_margin"
			android:layout_marginTop="@dimen/item_filter_icon_margin"
			android:contentDescription="@string/description_filter_thread"
			app:layout_constraintStart_toEndOf="@id/item_filter_icon_notification"
			app:layout_constraintTop_toBottomOf="@id/item_filter_expiration" />

		<ImageView
			android:id="@+id/item_filter_icon_user"
			android:layout_width="@dimen/item_filter_icon_size"
			android:layout_height="@dimen/item_filter_icon_size"
			android:src="@drawable/user"
			android:layout_marginStart="@dimen/item_filter_icon_margin"
			android:layout_marginTop="@dimen/item_filter_icon_margin"
			android:contentDescription="@string/description_filter_user_timeline"
			app:layout_constraintStart_toEndOf="@id/item_filter_icon_thread"
			app:layout_constraintTop_toBottomOf="@id/item_filter_expiration" />

		<androidx.constraintlayout.widget.Barrier
			android:id="@+id/item_filter_icon_barrier"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:constraint_referenced_ids="item_filter_icon_home,item_filter_icon_notification,item_filter_icon_public,item_filter_icon_thread,item_filter_icon_user"
			app:barrierDirection="bottom" />

		<TextView
			android:id="@+id/item_filter_action"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textSize="@dimen/item_filter_default_textsize"
			android:layout_marginTop="@dimen/item_filter_layout_margin"
			android:lines="1"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/item_filter_icon_barrier"
			app:layout_constraintEnd_toEndOf="parent" />

		<TextView
			android:id="@+id/item_filter_keyword_list"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textSize="@dimen/item_filter_default_textsize"
			android:layout_marginTop="@dimen/item_filter_layout_margin"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/item_filter_action"
			app:layout_constraintEnd_toEndOf="parent" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>